packages/envision/src/scss/form.scss
.#{$prefix}-form {
   input,
   select,
   textarea {
      font-family: inherit;
   }

   input {
      margin: 0;
   }

   &-input {
      background-color: css-var('form-input-background-color');
      background-image: none;
      border: $border-width $border-style css-var('form-input-border-color');
      border-radius: css-var('form-input-border-radius');
      box-sizing: border-box;
      color: css-var('form-input-font-color');
      display: block;
      font-size: css-var('font-size-medium');
      line-height: $form-input-line-height;
      margin: 0;
      padding: css-var('spacing-x-small');
      transition: border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
      width: 100%;

      @include placeholder {
         color: css-var('form-input-font-color');
         filter: opacity(0.5);
      }

      &[disabled],
      &[readonly] {
         @include disabled;
      }

      &[disabled] {
         cursor: not-allowed;
         user-select: none;
      }

      &:focus {
         @include focus();
      }

      &[type='search'] {
         appearance: none;
      }

      &[contenteditable=''],
      &[contenteditable='true'] {
         height: 88px;
         overflow: auto;
         resize: vertical;
      }

      &::-webkit-search-decoration,
      &::-webkit-search-cancel-button {
         display: none;
      }
   }

   select:not([multiple]) {
      height: calc(
         #{css-var('spacing-x-small')} * 2 + #{$form-input-line-height * 1em} +
            #{$border-width * 2}
      );
   }

   &-element {
      margin-bottom: css-var('spacing-medium');

      &__label {
         display: inline-block;
         font-size: css-var('font-size-medium');
         font-weight: $font-weight-semibold;
         margin-bottom: css-var('spacing-xx-small');
      }

      &__help,
      &__feedback {
         display: block;
         font-size: css-var('font-size-small');
         font-style: italic;
         margin-bottom: css-var('spacing-x-small');
         margin-top: css-var('spacing-x-small');
      }

      &__help {
         color: css-var('font-color-lighter');
         font-size: css-var('font-size-small');
      }

      &--success {
         @include input-validation-state(
            'color-success',
            'border-success-color'
         );
      }

      &--warning {
         @include input-validation-state(
            'color-warning-dark',
            'border-warning-color'
         );
      }

      &--danger {
         @include input-validation-state('color-danger', 'border-danger-color');
      }

      &[type='file'] {
         display: block;
      }

      textarea {
         border-radius: css-var('form-input-border-radius');
         padding: css-var('spacing-x-small');
         resize: vertical;
      }
   }

   &-multiple-select {
      select[multiple] {
         padding: css-var('spacing-xx-small');
      }

      select[multiple] > option {
         padding: css-var('spacing-x-small');
      }
   }

   &-radio {
      display: block;
      margin-bottom: css-var('spacing-x-small');
      padding-left: 1.875em;
      position: relative;
      font-size: css-var('font-size-medium');

      &__fake {
         content: '';
         position: absolute;
         left: 0;
         top: 0;
         width: $radiobutton-size;
         height: $radiobutton-size;
         background-color: css-var('form-input-background-color');
         border: $border-width $border-style css-var('form-input-border-color');
         border-radius: 50%;
         box-sizing: border-box;
      }

      label &__fake:after {
         $scale: ($radiobutton-checked-size / $radiobutton-size);
         content: '';
         width: $radiobutton-size * $scale;
         height: $radiobutton-size * $scale;
         background-color: css-var('element-primary-background-color');
         position: absolute;
         display: none;
         left: calc(50% - #{$radiobutton-size * $scale / 2});
         top: calc(50% - #{$radiobutton-size * $scale / 2});
         border-radius: 50%;
         box-sizing: border-box;
      }

      [type='radio'] {
         cursor: pointer;
         position: absolute;
         width: 100%;
         height: 100%;
         z-index: 1;
         opacity: 0;
      }

      [type='radio']:checked + label &__fake {
         border-color: css-var('element-primary-background-color');

         &:after {
            display: block;
         }
      }

      [type='radio']:focus + label &__fake {
         @include focus-shadow();
      }

      &__label {
         display: inline;
         vertical-align: sub;
      }

      // Workaround for Safari
      & [type='radio'] ~ label:hover &__fake {
         background-color: transparent;
      }

      &--disabled {
         label {
            @include disabled;
            cursor: not-allowed;
         }

         input {
            cursor: not-allowed;
         }
      }
   }

   $form-element: #{$prefix}-form-element;
   //Variants
   &--horizontal {
      .#{$form-element} {
         display: flex;
         flex-wrap: wrap;

         & > .#{$form-element}__label {
            flex-basis: 20%;
         }

         &__control {
            flex-basis: 80%;
         }

         &__help {
            margin-left: 20%;
         }
      }
   }

   &--inline {
      display: flex;

      .#{$form-element} {
         align-items: center;
         display: flex;
         margin-bottom: 0;
         margin-right: css-var('spacing-x-small');

         &__label {
            margin-bottom: 0;
            margin-right: css-var('spacing-x-small');
         }

         &__help {
            margin-left: css-var('spacing-xx-small');
         }
      }

      .#{$prefix}-form-radio,
      .#{$prefix}-checkbox {
         margin-bottom: 0;
      }
   }

   &__row {
      display: flex;

      .#{$form-element} {
         flex: 1;

         @for $i from 1 through 6 {
            &--#{$i} {
               flex: $i;
            }
         }

         + .#{$form-element} {
            margin-left: css-var('spacing-xx-small');
         }
      }
   }
}

.#{$prefix}-checkbox {
   display: block;
   font-size: css-var('font-size-medium');

   [type='checkbox'] {
      @include visually-hidden();
   }

   [type='checkbox']:checked + label &__fake::after {
      $tick-position: 50%;
      content: '';
      display: block;
      position: absolute;
      top: 40%;
      left: $tick-position;
      width: $checkbox-size * 0.7;
      height: $checkbox-size * 0.25;
      background-color: transparent;
      border-bottom: 2px solid css-var('element-primary-font-color');
      border-left: 2px solid css-var('element-primary-font-color');
      transform: translate3d(-49%, -45%, 0) rotate(-50deg);
   }

   [type='checkbox']:disabled + label &__fake,
   [type='checkbox']:disabled + label &__label {
      @include disabled;

      &:after {
         opacity: 0.7;
      }
   }

   [type='checkbox']:focus + label &__fake {
      @include focus();
   }

   &__fake {
      background-color: css-var('form-input-background-color');
      border: $border-width $border-style css-var('form-input-border-color');
      border-radius: css-var('border-radius');
      display: inline-block;
      height: $checkbox-size;
      margin-right: css-var('spacing-xx-small');
      position: relative;
      transition: border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
      vertical-align: middle;
      width: $checkbox-size;
   }

   [type='checkbox']:checked + label &__fake {
      background-color: css-var('element-primary-background-color');
   }

   &__label {
      display: inline;
      vertical-align: bottom;
   }

   &--disabled {
      label {
         color: css-var('font-color-light');
         cursor: not-allowed;
      }
   }
}

.#{$prefix}-switch {
   position: relative;
   margin-bottom: css-var('spacing-x-small');
   font-size: css-var('font-size-medium');

   input {
      @include visually-hidden;
   }

   &__label {
      display: inline-flex;
      justify-content: flex-start;
      align-items: flex-start;
      align-content: center;
   }

   &__text {
      display: inline-block;
      margin-top: 0.1875em;

      .#{$prefix}-switch__slider + & {
         margin-left: css-var('spacing-small');
      }

      input:disabled ~ & {
         @include disabled;
      }
   }

   &__slider {
      display: inline-block;
      position: relative;
      cursor: pointer;
      top: 0;
      left: 0;
      flex: 0 0 2.375em;
      width: 2.375em;
      height: 1.25em;
      border-radius: 0.75em;
      border: 0.125em solid css-var('element-common-background-color-dark');
      background-color: css-var('element-common-background-color-dark');
      transition: 0.3s;

      .#{$prefix}-switch__text + & {
         margin-left: css-var('spacing-small');
      }

      &:before {
         position: absolute;
         content: '';
         height: 1.25em;
         width: 1.25em;
         border-radius: 50%;
         left: 0;
         top: 0;
         background-color: css-var('element-primary-font-color');
         transition: 0.3s;

         input:checked ~ & {
            transform: translateX(1.125em);
         }
      }

      input:checked ~ & {
         background-color: css-var('element-primary-background-color');
         border-color: css-var('element-primary-background-color');
      }

      input:focus ~ & {
         @include focus();
      }

      input:disabled ~ & {
         @include disabled;

         &:before {
            opacity: 0.5;
         }
      }
   }
}

